--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ body {
     padding: 50px 0 0 0;
 }
 
+.chart-wrapper {
+    position: relative;
+}
+
 .chart-wrapper .title {
     font-size: 30px;
     font-weight: bolder;
@@ -125,3 +129,9 @@ body {
     top: 4px;
     border-bottom: 0;
 }
+
+.hint-title {
+}
+.hint-desc {
+}
+
